--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-phone-number-input": "^3.4.8",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0",
